# yaMkvInfoReader

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
options/: CmdArgsOptionsParser.cpp  CmdArgsOptionsParser.h
scripts/: build.sh  buildDebug.sh  buildRelase.sh  runTests.sh
src/: CMakeLists.txt  main.cpp
src/logging/: AppLogger.cpp  AppLogger.h  ConsoleLogWriter.cpp  ConsoleLogWriter.h  ILogWriter.h  ILogger.h  LogLevel.h
src/mkvs/: AvCodecMkvInfoReader.cpp  AvCodecMkvInfoReader.h  IMkvInfoReader.h  MkvFileInfo.h  StreamInfo.h
src/options/: AppOptions.h  CmdArgsOptionsParser.cpp  CmdArgsOptionsParser.h  IOptionsParser.h
test/: CMakeLists.txt
test/options/: CmdArgsOptionsParserShould.cpp
